--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <app></app>
-<script src="bundle.js" type="text/javascript"></script>
+<script src="/bundle.js" type="text/javascript"></script>
 </body>
 </html>
