--- a/web/about/nest.html
+++ b/web/about/nest.html
@@ -3,8 +3,8 @@ require('./test2.html');
 <nest show = {show}>
     <div>nest</div>
     <ul>
-        <li><a href="/about/nest/test1">test1</a></li>
-        <li><a href="/about/nest/test2">test2</a></li>
+        <li><a href="/about/nest/_111/test1">{opts.route.path}</a></li>
+        <li><a href="/about/nest/_111/test2">test2</a></li>
     </ul>
     <test1></test1>
     <test2></test2>
@@ -12,7 +12,9 @@ require('./test2.html');
         import {connect} from '../framework/riot-redux';
         import actions from '../todo/todo.actions';
         connect(
-            null,
+            (state)=>({
+                route: state.route
+            }),
             (dispatch)=>({
                 getTodos: ()=>{dispatch(actions.getTodos())}
             })
