--- a/web/todo/todo-list.html
+++ b/web/todo/todo-list.html
@@ -36,7 +36,7 @@
             this.opts.getTodos();
         });
 
-        this.isShow = (todo) =>{
+        this.isShow = todo =>{
             if(this.opts.visibility === 'all'){
                 return true;
             }
