--- a/web/about/nest.html
+++ b/web/about/nest.html
@@ -3,7 +3,7 @@ require('./test2.html');
 <nest show = {show}>
     <div>nest</div>
     <ul>
-        <li><a href="/about/nest/_111/test1">{opts.route.path}</a></li>
+        <li><a href="/about/nest/_111/test1">{opts.route.$state}</a></li>
         <li><a href="/about/nest/_111/test2">test2</a></li>
     </ul>
     <test1></test1>
