--- a/web/about/test1.html
+++ b/web/about/test1.html
@@ -1,6 +1,14 @@
 <test1 show="{show}">
-    <div>test1</div>
+    <div>{this.opts.route.$state}</div>
     <script>
-
+        import {connect} from '../framework/riot-redux';
+        connect(
+            state=>({
+                route: state.route
+            })
+        )(this);
+        this.on('update', function(){
+            console.warn(this.opts.route.$location)
+        })
     </script>
 </test1>
