--- a/web/biz/about/about.html
+++ b/web/biz/about/about.html
@@ -6,7 +6,7 @@ require('./nest.html')
     </ul>
     <nest></nest>
     <script>
-        import {connect} from '../framework/riot-redux';
+        import {connect} from 'riot-redux';
         this.mixin('router');
         connect(
             null,
