--- a/web/biz/todo/todo-list.html
+++ b/web/biz/todo/todo-list.html
@@ -18,7 +18,7 @@
     <script>
         "use strict";
         import actions from '../todo/todo.actions';
-        import {connect} from '../framework/riot-redux';
+        import {connect} from '../../framework/riot-redux';
 
         connect(
             (state, ownProp) => ({
