--- a/web/app/app.html
+++ b/web/app/app.html
@@ -1,5 +1,5 @@
-require('./todo/todo-list.html')
-require('./about/about.html')
+require('../biz/todo/todo-list.html')
+require('../biz/about/about.html')
 <app>
     <div>riot</div>
     <ul>
