--- a/web/biz/about/nest.html
+++ b/web/biz/about/nest.html
@@ -9,7 +9,7 @@ require('./test2.html');
     <test1></test1>
     <test2></test2>
     <script>
-        import {connect} from '../framework/riot-redux';
+        import {connect} from 'riot-redux';
         import actions from '../todo/todo.actions';
         this.mixin('router');
         connect(
