--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,user-scalable=no" />
+    <title>8080</title>
 </head>
 <body>
-<app></app>
-<script src="/bundle.js" type="text/javascript"></script>
+    <loading></loading>
+    <app></app>
+    <script src="/bundle.js" type="text/javascript"></script>
 </body>
 </html>
